--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="header">
-    <p class="h2 no-pad-bottom">Pennsylvania has languished without a budget for</p>
+    <p class="h2 no-pad-bottom">Pennsylvania has languished without a real budget for</p>
     <div id="clock">
         <div>
             <span id="months"></span>
@@ -41,7 +41,7 @@ layout: default
         Give me another reason
     </button>
     <button class="btn" id="call-to-action-btn">
-        Ok, this is nuts
+        Ok yinz, this is crazy
     </button>
     <br/><br/>
 </div>
@@ -50,7 +50,7 @@ layout: default
 <div id="do-something">
     <p class="h2">Don't just read &mdash; here are some ways you can <i>act</i></p>
 
-    <p><strong>Contact Pennsylvania politicians</strong> and tell them that Pennsylvania needs a budget <i>ASAP</i>. <br /><a href="http://openstates.org/find_your_legislator/">Look up your state reps</a>.</p>
+    <p><strong>Contact Pennsylvania politicians Governor <a href="https://www.governor.pa.gov/contact/">Tom Wolf</a>, Speaker of the House <a href="http://www.legis.state.pa.us/cfdocs/legis/home/member_information/house_bio.cfm?id=289">Mike Turzai</a>, and President pro tem of the Senate <a href="http://www.legis.state.pa.us/cfdocs/legis/home/member_information/senate_bio.cfm?id=283">Joseph Scarnati</a></strong> and tell them that Pennsylvania needs a budget <i>ASAP</i>. <br /><a href="http://openstates.org/find_your_legislator/">Look up your state reps, and contact them as well.</a>.</p>
     <p><strong><a href="[add me]">Contribute your story</a></strong> of how the Pennsylvania budget crisis has affected you. We'll add it to this site!</p>
     <p><strong>Spread the word!</strong> Share this site on social media and comment using #ticktockPA.</p>
     <br/>
