--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@ layout: default
     <h2 id='why'>What is this website?</h2>
     <p><strong>Pennsylvania Budget Clock</strong> aggregates stories of the impact of the budget impasse in order to impose a greater sense of urgency and pressure Pennsylvania politicians to act.</p> 
 	
-	<p>Tweet using the <a href="http://twitter.com/home?status=%40openpgh%20%23ticktockpa">#ticktockPA</a> hashtag.</p>
+	<p>Tweet using the <a href="http://twitter.com/home?status=%20Check%20out%20pabudgetclock.com%20!%20%23ticktockpa%20(cc%20%40openpgh)">#ticktockPA</a> hashtag.</p>
 	
 	<h2 id='team'>Team</h2>
-	<p>This is a volunteer, <a href="https://github.com/chihacknight/il-budget-clock/" target="_blank">open-source</a> project of <a href="http://chihacknight.org/" target="_blank">Chi Hack Night</a>, localized for Pennsylvania by <a href="http://opgh.org/">Open Pittsburgh</a>.</p>
+	<p>This is a volunteer, <a href="https://github.com/chihacknight/il-budget-clock/" target="_blank">open-source</a> project of <a href="http://chihacknight.org/" target="_blank">Chi Hack Night</a>, <a href="https://github.com/connorsb/il-budget-clock">localized</a> for Pennsylvania by <a href="http://opgh.org/">Open Pittsburgh</a>.</p>
 
 	<p>Chicago Contributors:</p>
 	<ul>
@@ -48,4 +48,6 @@ layout: default
 	<p>Pittsburgh Contributors:</p>
 	<ul>
 		<li><a href="https://twitter.com/connorsb">Connor Sites-Bowen</a></li>
+	</ul>	
+	<p>This is a work in progress. Contribute your changes <a href="https://github.com/connorsb/il-budget-clock">here.</a></p.
 </div>
