--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
 
     <p><strong>Contact Pennsylvania politicians Governor <a href="https://www.governor.pa.gov/contact/">Tom Wolf</a>, Speaker of the House <a href="http://www.legis.state.pa.us/cfdocs/legis/home/member_information/house_bio.cfm?id=289">Mike Turzai</a>, and President pro tem of the Senate <a href="http://www.legis.state.pa.us/cfdocs/legis/home/member_information/senate_bio.cfm?id=283">Joseph Scarnati</a></strong> and tell them that Pennsylvania needs a budget <i>ASAP</i>. <br /><a href="http://openstates.org/find_your_legislator/">Look up your state reps, and contact them as well.</a>.</p>
     <p><strong><a href="https://docs.google.com/forms/d/1jNqgCJRMXj9QNOffVixHVjC-IC45PzAInH6UTv2K8zU/viewform">Contribute your story</a></strong> of how the Pennsylvania budget crisis has affected you. We'll add it to this site!</p>
-    <p><strong>Spread the word!</strong> Share this site on social media and comment using #ticktockPA.</p>
+    <p><strong>Spread the word!</strong> Share this site on social media and comment using <a href="http://twitter.com/home?status=%20Check%20out%20pabudgetclock.com%20!%20%23ticktockpa%20(cc%20%40openpgh)">#ticktockPA.</a></p>
     <br/>
 </div>
 
