--- a/index.html
+++ b/index.html
@@ -26,6 +26,29 @@ layout: default
             <div class="small">Seconds</div>
         </div>
     </div>
+	<p class="h2 no-pad-bottom">The upcoming budget for 2016-2017 will be announced in</p>
+	<div id="clock2">
+        <div>
+            <span id="months2"></span>
+            <div class="small">Months</div>
+        </div>
+        <div>
+            <span id="days2"></span>
+            <div class="small">Days</div>
+        </div>
+        <div>
+            <span id="hours2"></span>
+            <div class="small">Hours</div>
+        </div>
+        <div>
+            <span id="minutes2"></span>
+            <div class="small">Minutes</div>
+        </div>
+        <div>
+            <span id="seconds2"></span>
+            <div class="small">Seconds</div>
+        </div>
+    </div>	
 </div>
 
 <div class='content'>
