arg forgot to save
saaaaave

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ layout: default
 
 <div class="header">
     <p class="h2 no-pad-bottom">Pennsylvania has languished without a real budget for</p>
+
     <div id="clock">
         <div>
             <span id="months"></span>
@@ -26,7 +27,8 @@ layout: default
             <div class="small">Seconds</div>
         </div>
     </div>
-	<p class="h2 no-pad-bottom">The upcoming budget for 2016-2017 will be announced in</p>
+	<p class="h2 no-pad-bottom2">The upcoming budget for 2016-2017 will be announced in</p>
+
 	<div id="clock2">
         <div>
             <span id="months2"></span>
