--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@ layout: default
             <div class="small">Seconds</div>
         </div>
     </div>
+	<p class="h2 no-pad-bottom">The Governor gives his budget address for the <i>upcoming year </i> &nbsp in</p>
+	<div id="clock">
+		<div>
+			<span id="govdays"></span>
+			<div class="small">Hours</div>
+		</div>
+	</div>
 </div>
 
 <div class='content'>
