--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
             <div class="small">Seconds</div>
         </div>
     </div>
-	<p class="h2 no-pad-bottom">The Governor gave his <a href="http://www.wtae.com/news/governor-wolfs-20162017-budget-address-for-pennsylvania/37899574">budget address</a> for the <i>upcoming year </i> &nbsp in</p>
+	<p class="h2 no-pad-bottom">The Governor gave his <a href="http://www.wtae.com/news/governor-wolfs-20162017-budget-address-for-pennsylvania/37899574">budget address</a> for the <i>upcoming year </i></p>
 	<div id="clock">
 		<div>
 			<span id="govdays"></span>
