--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@ layout: default
 
     <br/>
     <p><a href="about.html#why">Why is this happening?</a></p>
-    <p><a href="about.html#team">Proudly built by volunteers at Chi Hack Night, and adapted by Open Pittsburgh.</a></p>
+    <p><a href="about.html#team">Proudly built by volunteers at Chi Hack Night. Adapted by Open Pittsburgh.</a></p>
     <br/>
 </div>
