--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="header">
-    <p class="h2 no-pad-bottom">Pennsylvania has languished without a real budget for</p>
+    <p class="h2 no-pad-bottom">Pennsylvania's new budget is due in</p>
     <div id="clock">
         <div>
             <span id="months"></span>
