--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="header">
-    <p class="h2 no-pad-bottom">Pennsylvania needs a new budget in</p>
+    <p class="h2 no-pad-bottom">Pennsylvania's budget is overdue by</p>
     <div id="clock">
         <div>
             <span id="months"></span>
