name change and also stop the clock.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div class="header">
+    <p class="h2 no-pad-bottom">Pennsylvania has a budget!</p>
+    <!--
     <p class="h2 no-pad-bottom">Pennsylvania's budget is overdue by</p>
     <div id="clock">
         <div>
@@ -26,8 +28,9 @@ layout: default
             <div class="small">Seconds</div>
         </div>
     </div>
+    -->
 </div>
-
+<!--
 <div class='content'>
     <p class="h2">So, why does this matter?</p>
     <div id="reasons">
@@ -55,11 +58,11 @@ layout: default
     <p><strong>Spread the word!</strong> Share this site on social media and comment using <a href="http://twitter.com/home?status=Clock%20that%20shows%20how%20long%20Pennsylvania%20has%20languished%20without%20a%20real%20budget%20-%20http%3A%2F%2FPaBudgetClock.com%20%23ticktockpa%20h%2Ft%20%40OpenPGH">#ticktockPA.</a></p>
     <br/>
 </div>
-
+-->
 <div class="footer">
 
     <br/>
     <p><a href="about.html#why">Why is this happening?</a></p>
-    <p><a href="about.html#team">Proudly built by volunteers at Chi Hack Night. Adapted by Open Pittsburgh.</a></p>
+    <p><a href="about.html#team">Proudly built by volunteers at Chi Hack Night. Adapted by Code for Pittsburgh.</a></p>
     <br/>
 </div>
